@@ -1,5 +1,8 @@
 2021-03-30  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ganymede/jsr223/ThymeleafScriptEngine.java:
+	Initial writing (exposed factory internal class).
+
 	* src/main/java/ganymede/notebook/Notebook.java:
 	Added static bootstrap() method to generate JShell bootstrap
 	code.
